--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,7 @@ cargo {
     
     local {
     	
-    	homeDir = file('$buildDir/extract')
+    	homeDir = file('./$buildDir/extract')
     	
     	containerProperties {
             property 'cargo.tomcat.ajp.port', 9099
@@ -91,8 +91,8 @@ cargo {
         
         installer {
             installUrl = 'http://mirror.vorboss.net/apache/tomcat/tomcat-8/v8.5.35/bin/apache-tomcat-8.5.35-windows-x64.zip'
-            downloadDir = file('$buildDir/download')
-            extractDir = file('$buildDir/extract')
+            downloadDir = file('./$buildDir/download')
+            extractDir = file('./$buildDir/extract')
         }
     }
         		
